--- a/UserManagement.Web/wwwroot/css/site.css
+++ b/UserManagement.Web/wwwroot/css/site.css
@@ -1,22 +1,169 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    background-color: #f7f7f7;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+.container {
+    min-width: 500px;
+}
+
+.mt {
+    margin-top: 10px;
+}
+
+.mb {
+    margin-bottom: 10px;
+}
+
+
+.ml {
+    margin-left: 10px;
+}
+
+.pl {
+    padding-left: 10px;
+}
+
+.text-green {
+    color: #0a8438;
+}
+
+.text-red {
+    color: #ff0000;
+}
+
+.box {
+    margin: 10px 20px;
+    padding: 15px;
+    border-radius: 8px;
+    border: 2px solid #d3d1d1;
+    box-shadow: 0px 0px 3px 2px #ffffff;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: stretch;
+    align-items: stretch;
+}
+
+    .flex > div {
+        padding: 15px;
+    }
+
+.flex-1 {
+    flex: 1 auto;
+}
+
+
+.button {
+    padding: 8px 12px;
+    border: 2px solid #cacaca;
+    border-radius: 8px;
+    outline: 3px solid #ffffff;
+    font-size: 101%;
+}
+
+.button-blue-back {
+    background-color: #3a81bd;
+    color: #ffffff;
+    border: 2px solid #3f80ca;
+}
+
+    .button-blue-back:hover {
+        background-color: #1274c7;
+    }
+
+.button-green-back {
+    background-color: #088e36;
+    color: #ffffff;
+    border: 2px solid #73d695;
+}
+
+    .button-green-back:hover {
+        background-color: #066627;
+    }
+
+.button-red-back {
+    background-color: #cb511e;
+    color: #ffffff;
+    border: 2px solid #e49776;
+}
+
+    .button-red-back:hover {
+        background-color: #96370f;
+    }
+
+
+a:link, a:visited {
+    color: blue;
+}
+
+a.link-hover:link {
+    padding: 5px;
+    border-radius: 9px;
+    transition: background-color 0.2s;
+}
+
+a.link-hover:hover {
+    background-color: #e5e5e5;
+}
+
+.form-input {
+    padding: 8px 10px;
+    font-size: 105%;
+    border-radius: 8px;
+    border: 1px solid #d0d0d0;
+    width: 100%;
+    transition: box-shadow 0.2s;
+}
+
+    .form-input:focus {
+        outline: none;
+        border: 1px solid #245eb0;
+        box-shadow: 0px 0px 4px 0px #1383a4;
+    }
+
+.w-50 {
+    width: 50%;
+}
+
+.pt {
+    padding-top: 10px;
+}
+
+.form-label {
+    display: inline-block;
+}
+
+.error {
+    color: red;
+    font-size: small;
 }
