--- a/UserManagement.UI/Pages/Home.razor
+++ b/UserManagement.UI/Pages/Home.razor
@@ -4,13 +4,14 @@
 
 
 
-<div class="bg-zinc-500 h-100 flex-grow flex items-center justify-center">
+<div class="bg-slate-200 h-100 flex-grow flex items-center justify-center">
     <div class="mx-auto px-4 sm:px-6 lg:px-8 py-24 space-y-8">
-        <div class="max-w-3xl text-center mx-auto ">
-            <h1 class="block font-medium text-slate-900 text-4xl sm:text-5xl md:text-6xl lg:text-7xl">
+        <div class="max-w-3xl text-center ">
+            <h1 class=" font-medium text-slate-900 text-4xl sm:text-5xl md:text-6xl lg:text-7xl focus:ring-0-transparent focus:border-0-transparent">
                 Now it's easier than ever to manage users
             </h1>
         </div>
+
 
         <div class="max-w-3xl text-center mx-auto">
             <p class="text-lg text-yellowClr bg-clip-text text-transparent bg-gradient-to-r from-yellowClr to-offYellowClr text-x">User Managment Dashboard</p>
